--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   </header>
 
   <main class="main-container">
+
     <h2 class="turn-display">Players Turn</h2>
       <div class="game-board-container">
-        
       </div>
   </main>
 
@@ -34,4 +34,65 @@
   </footer>
   </div>
 </body>
+
+
+
+
+<dialog id="information-options-dialog">
+  <h1>Player Creation and Options</h1>
+  <form id="information-options-form" action="">
+    <div class="player-one-information-container">
+    <h2>Player One</h2>
+    <div class="type-difficulty-container">
+    <label for="player-one-type">
+      <select name="player-one-type" id="player-one-type" class="dialog-select">
+        <option value="human">Human</option>
+        <option value="computer">Computer</option>
+      </select>
+    </label>
+    <label for="player-one-difficulty">
+      <select name="player-one-difficulty" id="player-one-difficulty" class="dialog-select">
+        <option value="easy">Easy</option>
+        <option value="medium">Medium</option>
+        <option value="hard">Hard</option>
+        <option value="impossible">Impossible</option>
+      </select>
+    </label>
+  </div>
+    <label for="player-one-name">
+      <input type="text" id="player-one-name" class="dialog-text-input" placeholder="Name" maxlength="13">
+    </label>
+    <label for="player-one-game-piece">
+      <input type="text" id="player-one-game-piece" class="dialog-text-input" placeholder="Game Piece ex:(X,O)" maxlength="1">
+    </label>
+  </div>
+  <div class="player-two-information-container">
+    <h2>Player Two</h2>
+    <div class="type-difficulty-container">
+    <label for="player-two-type">
+      <select name="player-two-type" id="player-two-type" class="dialog-select">
+        <option value="human">Human</option>
+        <option value="computer">Computer</option>
+      </select>
+    </label>
+      <label for="player-two-difficulty">
+      <select name="player-two-difficulty" id="player-two-difficulty" class="dialog-select">
+        <option value="easy">Easy</option>
+        <option value="medium">Medium</option>
+        <option value="hard">Hard</option>
+        <option value="impossible">Impossible</option>
+      </select>
+    </label>
+  </div>
+    <label for="player-two-name">
+      <input type="text" id="player-two-name" class="dialog-text-input" placeholder="Name" maxlength="15">
+    </label>
+    <label for="player-two-game-piece">
+      <input type="text" id="player-two-game-piece" class="dialog-text-input" placeholder="Game Piece ex:(X,O)" maxlength="1">
+    </label>
+    </div>
+    <button type="button" class="information-submit-button">Submit</button>
+  </form>
+</div>
+</dialog>
 </html>
