Add logic to player creation
Dynamically enables and disables the difficulty option when picking
player type (computer or human).
  -> Event listener runs when the player type option is changed and
     sets/removes the disabled attribute

--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
     <h2>Player One</h2>
     <div class="type-difficulty-container">
     <label for="player-one-type">
-      <select name="player-one-type" id="player-one-type" class="dialog-select">
+      <select name="player-one-type" id="player-one-type" class="dialog-select player-type-select">
         <option value="human">Human</option>
         <option value="computer">Computer</option>
       </select>
     </label>
     <label for="player-one-difficulty">
-      <select name="player-one-difficulty" id="player-one-difficulty" class="dialog-select">
+      <select name="player-one-difficulty" id="player-one-difficulty" class="dialog-select difficulty-select">
         <option value="easy">Easy</option>
         <option value="medium">Medium</option>
         <option value="hard">Hard</option>
@@ -70,13 +70,13 @@
     <h2>Player Two</h2>
     <div class="type-difficulty-container">
     <label for="player-two-type">
-      <select name="player-two-type" id="player-two-type" class="dialog-select">
+      <select name="player-two-type" id="player-two-type" class="dialog-select player-type-select">
         <option value="human">Human</option>
         <option value="computer">Computer</option>
       </select>
     </label>
       <label for="player-two-difficulty">
-      <select name="player-two-difficulty" id="player-two-difficulty" class="dialog-select">
+      <select name="player-two-difficulty" id="player-two-difficulty" class="dialog-select difficulty-select">
         <option value="easy">Easy</option>
         <option value="medium">Medium</option>
         <option value="hard">Hard</option>
