Add gameController logic
Gets two players from playerInformation module and selects who goes
first randomly.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <main class="main-container">
 
-    <h2 class="turn-display">Players Turn</h2>
+    <h2 class="turn-display"></h2>
       <div class="game-board-container">
       </div>
   </main>
