Update game logic
Added initBoard() and clearBoard() methods to gameBoard object
Made gameController a Module object with methods
  -> updateActiveGamePlayers
      -->Works with playerOptionsController to keep player information
         up to date.
  -> getActiveGamePlayers
      -->Returns array containing playerOne and playerTwo objects.
  -> getCurrentPlayer
      -->Returns current player, used to get player game piece.
  -> updateCurrentPlayer
      -->Alternates player turns
  -> checkBoard
      -->Checks for three in a row in rows, columns, and diagonal.

Updated displayController logic to properly call gameBoard.makeMove().

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 <dialog id="information-options-dialog">
   <form id="information-options-form" action="">
-    <h1>Player Creation and Options</h1>
+    <h1>Player Creation & Options</h1>
     <div class="player-one-information-container">
     <h2>Player One</h2>
     <div class="type-difficulty-container">
