--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <main class="main-container">
 
-    <h2 class="turn-display"></h2>
+    <h2 class="turn-display">Turn Display</h2>
       <div class="game-board-container">
       </div>
   </main>
@@ -102,4 +102,7 @@
   </form>
 </div>
 </dialog>
+
+
+<div class="filler"></div>
 </html>
