Add logic and styles
Added logic to check the results of the game and return said result
    -> Now checks for and returns tie.

Added end game dialog controller
    -> When a winner or a tie is detected a end round dialog opens
      -> This dialog displays the result (Tie, or Winners name)
      -> Gives the option to play again
      -> Gives the option to go directly to player options menu

Added startNewGame logic to gameController
  -> Clears the gameBoard array
  -> Clears the displayed gameBoard UI

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
     <h2 class="turn-display">Turn Display</h2>
       <div class="game-board-container">
+      
       </div>
   </main>
 
@@ -101,6 +102,14 @@
     <button type="button" class="information-submit-button">Submit</button>
   </form>
 </div>
+</dialog>
+
+<dialog id="end-round-dialog">
+  <h1 class="end-round-result"></h1>
+  <div class="end-round-buttons-container">
+    <button type="button" class="end-round-play-again-button">Play Again</button>
+    <button type="button" class="end-round-open-options-button">Options Menu</button>
+  </div>
 </dialog>
 
 
