Add session information sidebar structure and style

--- a/index.html
+++ b/index.html
@@ -22,11 +22,32 @@
   </header>
 
   <main class="main-container">
-
-    <h2 class="turn-display">Turn Display</h2>
-      <div class="game-board-container">
-      
+    <div class="game-board-container">
+      <h2 class="turn-display">Turn Display</h2>
+    </div>
+  <aside class="session-information-container">
+    <h3>Session Information</h3>
+    <div class="player-one-session">
+      <h4>WWWWWWWWWWWWW <span>{X}</span> <span>[Impossible]</span></h4>
+      <div class="p1-session-wins">Wins:</div>
+      <div class="p1-session-losses">Losses:</div>
+      <div class="p1-session-moves">Moves:</div>   
+    </div>
+    <div>
+      <div class="player-two-session">
+        <h4>Nolan<span>{X}</span><span>[Impossible]</span></h4>
+        <div class="p2-session-wins">Wins:</div>
+        <div class="p2-session-losses">Losses:</div>
+        <div class="p2-session-moves">Moves:</div>   
       </div>
+      <div class="session-totals">
+        <h4>Totals</h4>
+        <div class="session-total-ties">Ties:</div>
+        <div class="session-total-games">Games:</div>
+        <div class="session-total-moves">Moves:</div>
+      </div>
+    </div>
+  </aside>
   </main>
 
 
