Add game session information logic
When players are created they're now returned with wins, moves, and
losses properties

Added playerSessionController Module
  -> Handles the session information sidebar display initialization
     and updates
  -> Increments corresponding wins, moves, and losses

--- a/index.html
+++ b/index.html
@@ -25,26 +25,30 @@
     <div class="game-board-container">
       <h2 class="turn-display">Turn Display</h2>
     </div>
+
+
   <aside class="session-information-container">
     <h3>Session Information</h3>
     <div class="player-one-session">
-      <h4>WWWWWWWWWWWWW <span>{X}</span> <span>[Impossible]</span></h4>
-      <div class="p1-session-wins">Wins:</div>
-      <div class="p1-session-losses">Losses:</div>
-      <div class="p1-session-moves">Moves:</div>   
+      <h4 class="p1-session-name"></h4>
+      <div><span class="p1-session-type"></span><span class="p1-session-difficulty"></span><span class="p1-session-gp"></span></div>
+      <div>Wins: <span class="p1-session-wins"></span></div>
+      <div>Losses: <span class="p1-session-losses"></span></div>
+      <div>Moves: <span class="p1-session-moves"></span></div>   
     </div>
     <div>
       <div class="player-two-session">
-        <h4>Nolan<span>{X}</span><span>[Impossible]</span></h4>
-        <div class="p2-session-wins">Wins:</div>
-        <div class="p2-session-losses">Losses:</div>
-        <div class="p2-session-moves">Moves:</div>   
+        <h4 class="p2-session-name"></h4>
+        <div><span class="p2-session-type"></span><span class="p2-session-difficulty"></span><span class="p2-session-gp"></span></div>
+        <div>Wins: <span class="p2-session-wins"></span></div>
+        <div>Losses: <span class="p2-session-losses"></span></div>
+        <div>Moves: <span class="p2-session-moves"></span></div>   
       </div>
       <div class="session-totals">
         <h4>Totals</h4>
-        <div class="session-total-ties">Ties:</div>
-        <div class="session-total-games">Games:</div>
-        <div class="session-total-moves">Moves:</div>
+        <div>Ties: <span class="session-total-ties"></span></div>
+        <div>Games: <span class="session-total-games"></span></div>
+        <div>Moves: <span class="session-total-moves"></span></div>
       </div>
     </div>
   </aside>
