Add computerAI easy logic
created computerAI module with two methods:
  ->getAvailableMoves() which returns all null spaces in the gameBoard
  ->easyMove() which picks a completely random cell from the
    available moves array.

Abstracted a lot of logic away from the the displayController to allow
the AI to more effectively play.

Restructured and styled the endRoundDialog a bit so the gameBoard
is easier to see once the game ends.

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     </label>
   </div>
     <label for="player-two-name">
-      <input type="text" id="player-two-name" class="dialog-text-input" placeholder="Name" maxlength="15">
+      <input type="text" id="player-two-name" class="dialog-text-input" placeholder="Name" maxlength="10">
     </label>
     <label for="player-two-game-piece">
       <input type="text" id="player-two-game-piece" class="dialog-text-input" placeholder="Game Piece ex:(X,O)" maxlength="1">
@@ -129,13 +129,15 @@
 </div>
 </dialog>
 
+<div class="end-round-dialog-container">
 <dialog id="end-round-dialog">
   <h1 class="end-round-result"></h1>
   <div class="end-round-buttons-container">
     <button type="button" class="end-round-play-again-button">Play Again</button>
-    <button type="button" class="end-round-open-options-button">Options Menu</button>
+    <button type="button" class="end-round-open-options-button">Player Options</button>
   </div>
 </dialog>
+</div>
 
 
 <div class="filler"></div>
