--- a/index.html
+++ b/index.html
@@ -86,9 +86,7 @@
     <label for="player-one-difficulty">
       <select name="player-one-difficulty" id="player-one-difficulty" class="dialog-select difficulty-select" disabled>
         <option value="easy">Easy</option>
-        <option value="medium">Medium</option>
-        <option value="hard">Hard</option>
-        <option value="impossible">Impossible</option>
+        <option value="stupid">Stupid AI</option>
       </select>
     </label>
   </div>
@@ -111,9 +109,7 @@
       <label for="player-two-difficulty">
       <select name="player-two-difficulty" id="player-two-difficulty" class="dialog-select difficulty-select" disabled>
         <option value="easy">Easy</option>
-        <option value="medium">Medium</option>
-        <option value="hard">Hard</option>
-        <option value="impossible">Impossible</option>
+        <option value="stupid">Stupid AI</option>
       </select>
     </label>
   </div>
