Fix broke miniMax
Fixed the miniMax logic and have now created a true unbeatable AI
  -> At least I believe I did.
Added debugging functions
  -> analyzeMiniMax()
  -> testMiniMax()
Added difficulty options and moves
  -> easy - impossible using minimax and rng
Added comments

--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@
     <label for="player-one-difficulty">
       <select name="player-one-difficulty" id="player-one-difficulty" class="dialog-select difficulty-select" disabled>
         <option value="easy">Easy</option>
-        <option value="stupid">Stupid AI</option>
+        <option value="medium">Medium</option>
+        <option value="hard">Hard</option>
+        <option value="impossible">Impossible</option>
       </select>
     </label>
   </div>
@@ -109,7 +111,9 @@
       <label for="player-two-difficulty">
       <select name="player-two-difficulty" id="player-two-difficulty" class="dialog-select difficulty-select" disabled>
         <option value="easy">Easy</option>
-        <option value="stupid">Stupid AI</option>
+        <option value="medium">Medium</option>
+        <option value="hard">Hard</option>
+        <option value="impossible">Impossible</option>
       </select>
     </label>
   </div>
